client/my-sites/media-library/style.scss
@import 'content';
@import 'list-item';
@import 'list-item-file-details';
@import 'list-item-video';
@import 'upload-button';
@import 'upload-url';

.media-library__header.card {
	padding-top: 12px;
	padding-bottom: 12px;
	display: flex;
}

.dialog__content .media-library__header.card {
	box-shadow: none;
	.media-library__scale-range.range {
		top: 11px;
	}
}

.media-library__header .is-desktop {
	display: none;

	@include breakpoint( ">660px" ) {
		display: inline-block;
	}
}

.media-library__header .button {
	margin-right: 8px;
}

.media-library__header .button.media-library__upload-button {
	margin-right: 0;
	@include breakpoint( "<660px" ) {
		border-top-right-radius: 0;
		border-bottom-right-radius: 0;
	}
}
.media-library__header .button.media-library__upload-more {
	margin-left: 0;
}

.media-library__header.media-library__upload-url {
	margin-bottom: 10px;

	@include breakpoint( ">480px" ) {
		margin-bottom: 16px;
	}
}

.media-library__header-popover .popover__menu-item.is-compact {
	text-transform: none;
	font-size: 14px;
}

.media-library__filter-bar {
	display: flex;
	flex-flow: row nowrap;
	align-items: stretch;
	position: relative;

	@include breakpoint( "<480px" ) {
		flex-wrap: wrap;
	}

	.section-nav {
		flex: 1 auto;
		z-index: z-index( 'root', '.media-library .search.is-expanded-to-container' );

		@include breakpoint( "<480px" ) {
			width: auto;
		}
	}

	.plan-storage {
		display: none;
		margin-bottom: 9px;
		box-shadow:
		  0 0 0 1px transparentize( $gray-lighten-20, .5 ),
		  0 1px 2px $gray-lighten-30;
		background-color: $white;
		padding-left: 24px;
		padding-right: 24px;
		box-sizing: border-box;
		flex: 1 0 auto;

		@include breakpoint( ">480px" ) {
			display: flex;
		}

		@include breakpoint( ">660px" ) {
			display: none;
		}

		@include breakpoint( ">960px" ) {
			display: flex;
			margin-bottom: 17px;
		}
	}

	.media-library__datasource {
		box-shadow:
		  0 0 0 1px transparentize( $gray-lighten-20, .5 ),
		  0 1px 2px $gray-lighten-30;
		background-color: $white;
		box-sizing: border-box;
		display: flex;
		align-items: center;
		width: 65px;
		min-height: 50px;
		min-width: 65px;
		margin-bottom: 17px;

		@include breakpoint( "<480px" ) {
			align-items: normal;
			padding-top: 6px;
		}
		
		@include breakpoint( "<660px" ) {
			margin-bottom: 9px;	
		}
	}
}

.editor-media-modal .media-library__datasource {
	margin-bottom: 16px;

	@include breakpoint( "<480px" ) {
		margin-bottom: 9px;
	}
}

.media-library__source-button.is-borderless {
	padding: 5px;
	padding-left: 12px;
	height: 38px;

	img {
		min-width: 24px;
		min-height: 24px;
		margin-top: 2px;
	}

	.gridicons-chevron-down {
		top: -3px;
	}

	.gridicon {
		top: 4px;
	}

	&:after {
		@include noticon( '\f431', 20px );
		line-height: 16px;
		color: rgba( $gray, 0.5 );
		padding-top: 6px;
	}

	@include breakpoint( "<480px" ) {
		.gridicons-chevron-down {
			width: 18px;
			height: 18px;
			color: rgba( $gray, 0.5 );
		}

		.gridicon {
			top: 2px;
		}

		&:after {
			padding-top: 3px;
		}
	}
}

.media-library__source-button.is-open.is-borderless {
	&:after {
		@include noticon( '\f432', 20px );
	}

	.gridicon {
		color: $gray-dark;
	}
}

.editor-media-modal .media-library__filter-bar {
	.plan-storage {
		@include breakpoint( ">480px" ) {
			margin-bottom: 16px;
		}
	}
}

.media-library__heading {
	@include heading;
	display: inline-block;
	margin: 0;
	line-height: 40px;
	margin-right: 12px;

	@include breakpoint( "<480px" ) {
		display: none;
	}
}

.media-library__upload-buttons {
	display: inline;
}

.media-library__header-popover {
	.popover__menu-item {
		padding-left: 12px;
	}

	.popover__menu img, .popover__menu svg {
		margin-right: 8px;
		vertical-align: middle;
	}
}

.media-library__scale-toggle {
	position: absolute;
	right: 16px;
	&.segmented-control.is-compact .segmented-control__link {
		padding: 2px 4px;
	}

	@include breakpoint( ">480px" ) {
		display: none;
	}
}

.media-library__scale-range {
	display: none;

	@include breakpoint( ">480px" ) {
		display: block;
	}
}

.media-library__scale-toggle-label {
	@extend .screen-reader-text;
}

.media-library__scale-toggle .gridicon {
	margin: 2px 4px;
	vertical-align: middle;
}

.media-library__content .notice {
	margin-bottom: 0;
}

.media-library__list {
	padding: 0 16px;
}

.media-library__list-item.is-small .media-library__list-item-file-details .media-library__list-item-icon {
	top: 0;
}

.media-library__list-item.is-small .media-library__list-item-details-separator,
.media-library__list-item.is-small .media-library__list-item-file-extension {
	display: none;
}

.media-library__videopress-nudge-container {
	display: block;
	overflow-y: auto;
	right: 0;
	left: 0;
	margin: 0;
}

.editor-media-modal .media-library__videopress-nudge-container {
	position: absolute;
	top: 50px;
	bottom: 72px;
}

.media-library__videopress-nudge-container .upgrade-nudge-expanded {
	position: absolute;
	left: 0;
	right: 0;
	box-shadow: none;
	margin: 0;

	@include breakpoint( ">960px") {
		top: 50%;
		transform: translateY(-50%);
	}
}

.empty-content .media-library__videopress-nudge-regular.card.upgrade-nudge {
	margin-left: auto;
	margin-right: auto;
	text-align: left;
	width: 70%;
	text-decoration: none;
}

